--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./Media/Christopher Mothuli.jpg" alt="Christopher Mothuli Picture"
+        <img src="Christopher Mothuli.jpg" alt="Christopher Mothuli Picture"
         class="Chris" />
       </div>
       <div class="section__text">
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./Media/Christopher-Mothuli.pdf')"
+            onclick="window.open('Christopher-Mothuli.pdf')"
           >
             Download CV
           </button>
@@ -58,13 +58,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./Media/linkedin.png"
+            src="linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://linkedin.com/in/christopher-mothuli-42556218b'"
           />
           <img
-            src="./Media/github.png"
+            src="github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/'"
@@ -78,7 +78,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./Media/Devs.png"
+            src="Devs.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -87,7 +87,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./Media/experience.png"
+                src="experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -96,7 +96,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./Media/education (1).png"
+                src="education (1).png"
                 alt="Education icon"
                 class="icon"
               />
@@ -123,7 +123,7 @@
         </div>
       </div>
       <img
-        src="./Media/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -139,7 +139,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./Media/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -150,7 +150,7 @@
               </article>
               <article>
                 <img
-                  src="./Media/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -162,7 +162,7 @@
              
               <article>
                 <img
-                  src="./Media/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -179,7 +179,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./Media/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -193,7 +193,7 @@
               </article>
               <article>
                 <img
-                  src="./Media/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -207,7 +207,7 @@
         </div>
       </div>
       <img
-        src="./Media/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -231,7 +231,7 @@
 
       
       <img
-        src="./Media/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -243,7 +243,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./Media/email.png"
+            src="email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -251,7 +251,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./Media/linkedin.png"
+            src="linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
